# docs/generated/swagger/swagger.yaml
@@ -42,7 +42,7 @@ definitions:
     properties:
       env:
         type: string
-      image_id:
+      manifest_id:
         type: string
       type:
         type: string
@@ -118,6 +118,18 @@ definitions:
       app_config_snapshot:
         $ref: '#/definitions/pkg_api.ManifestAppConfigDoc'
       application_id:
+        type: string
+      artifact_digest:
+        type: string
+      artifact_media_type:
+        type: string
+      artifact_pushed_at:
+        type: string
+      artifact_ref:
+        type: string
+      artifact_repository:
+        type: string
+      artifact_tag:
         type: string
       created_at:
         type: string
@@ -264,6 +276,8 @@ definitions:
       id:
         type: string
       image_id:
+        type: string
+      manifest_id:
         type: string
       status:
         type: string
